[package]
name = "adjacency-list"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Adjacency List and Adjacency Graph"
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/adjacency-list"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
#ndarray = "0.15.6"

[dependencies.graph-types]
version = "0.0.*"
path = "../graph-types"

[dev-dependencies]

[features]
default = []
wolfram = ["graph-types/wolfram_wxf"]