[package]
name = "graph-derive"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared types for graph theory."
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/graph-derive"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "package.json"]

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]


[features]
default = []
serde = []
