[package]
name = "graph-derive"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "#[derive(Graph)] for graph-theory crate"
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/graph-derive"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "package.json"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }

[dev-dependencies]


[features]
default = []
serde = []
