[package]
name = "graph-families"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Famous graph families in graph theory."
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/graph-families"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.162", features = ["derive"], optional = true }

[dependencies.graph-types]
version = "0.0.*"
path = "../graph-types"
features = []

[dependencies.graph-derive]
version = "0.0.*"
path = "../graph-derive"
features = []

[dev-dependencies]
graph-theory = { version = "*", path = "../graph" }



[features]
default = ["wolfram"]
wolfram = ["graph-types/wolfram_wxf"]