[package]
name = "graph-types"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "Shared types for graph theory."
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/distantia"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "package.json"]

[dependencies]
serde = { version = "1.0.162", optional = true }
wolfram_wxf = { version = "0.6.3", optional = true }


[dev-dependencies]

[features]
default = []
serde = ["dep:serde"]
