[package]
name = "graph-types"
version = "0.0.4"
authors = ["Aster <192607617@qq.com>"]
description = "Shared types for graph theory."
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/distantia"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "package.json"]

[dependencies]
num-traits = "0.2.15"
dashmap = { version = "5.4.0", optional = true }
serde = { version = "1.0.162", optional = true }
wolfram_wxf = { version = "0.6.3", optional = true }


[dev-dependencies]
async-trait = "0.1.68"
graph-theory = { version = "0.0.*", path = "../graph" }

[features]
default = []
serde = ["dep:serde"]
