[package]
name = "graph-theory"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Adjacency Matrix and Adjacency Graph"
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/graph-theory"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
dashmap = { version = "5.4.0", optional = true }

[dependencies.graph-families]
version = "0.0.*"
path = "../graph-famous"

[dependencies.adjacency-list]
version = "0.0.*"
path = "../graph-adjacency-list"

[dependencies.adjacency-matrix]
version = "0.0.*"
path = "../graph-adjacency-matrix"

[dependencies.graph-types]
version = "0.0.*"
path = "../graph-types"

[dev-dependencies]

[features]
default = []
serde = ["graph-types/serde"]
wolfram = ["graph-types/wolfram_wxf", "adjacency-matrix/wolfram", "graph-families/wolfram"]

[package.metadata.docs.rs]
all-features = true