[package]
name = "graph-vision"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Graphviz in rust."
repository = "https://github.com/oovm/graph-rs"
documentation = "https://docs.rs/graph-types"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "package.json"]

[dependencies]
color-core = "0.1.6"
shape-core = "0.1.14"
serde = { version = "1.0.162", features = ["derive"], optional = true }

[dependencies.graph-types]
version = "0.0.10"
path = "../graph-types"

#[dependencies.adjacency-list]
#version = "0.0.1"
#path = "../graph-adjacency-list"

[dev-dependencies]
#graph-theory = { version = "*", path = "../graph" }
#async-trait = "0.1.68"


[features]
default = ["serde", "wolfram"]
wolfram = ["graph-types/wolfram_wxf"]
serde = ["dep:serde", "graph-types/serde"]
